2003-03-24  Peter Stephenson  <pws@csr.com>

	* 18378: Src/Zle/params.c: memory management for $killring
	was pathetic; setting $killring was in completely the wrong
	order; getting $killring when empty didn't return the
	default length.

	* 18376: zshconfig.ac, Src/system.h, Src/utils.c: use of
	wide characters needs some more header munging; also silence
	a couple of related gcc warnings.

2003-03-20  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18369: Completion/Unix/Command/_tidy: update HTML Tidy completion
	for the Tidy Classic -> TidyLib codebase transition

2003-03-18  Oliver Kiddle  <opk@zsh.org>

	* 18359: Src/utils.c: fix bug from 18343 where not enough memory
	was allocated if MB_LEN_MAX < 6

2003-03-18  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* unposted: Completion/Unix/Command/_xmlsoft: remove unnecessary
	declaration of local parameters

2003-03-15  Bart Schaefer  <schaefer@zsh.org>

	* 17659, 17661: zshconfig.ac: insert config.modules processing
	into config.status, so that a full configure is not necessary
	when changing the module configuration.

2003-03-15  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* unposted: Completion/X/Command/_xrdb: remove _xrdb as superior
	completion for xrdb is provided by _x_utils

2003-03-14  Oliver Kiddle  <opk@zsh.org>

	* 18343, 18348: zshconfig.ac, Doc/Zsh/builtins.yo, Src/utils.c:
	handle \u and \U escapes for specifying unicode characters

2003-03-14  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18351: Completion/Unix/Command/_antiword: new completion for
	antiword

2003-03-13  Oliver Kiddle  <opk@zsh.org>

	* 18347: Completion/Base/Utility/_alternative: fix problems
	with having more than one ((val\:desc ...)) style action

2003-03-12  Oliver Kiddle  <opk@zsh.org>

	* 18346: Completion/Unix/Command/_cdcd, Completion/Unix/Type/_users,
	Completion/Unix/Command/_iconv, Completion/Unix/Command/_java,
	Completion/Unix/Command/_sccs, Completion/Unix/Type/_locales: